fix(yalb-1104): alignment fix - storybook style change to grid variation only

--- a/components/01-atoms/images/image/cl-image.scss
+++ b/components/01-atoms/images/image/cl-image.scss
@@ -9,8 +9,10 @@
 }
 
 .sb-show-main {
-  .reference-card__image img {
-    height: 100%;
-    object-fit: cover;
+  [data-collection-type='grid'] {
+    .reference-card__image img {
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
